testsuite/gsksl/errors/returning-no-value.glsl
float
foo ()
{
  return;
}

void
main  ()
{
  float f = foo();
}
